--- a/styles/main.css
+++ b/styles/main.css
@@ -1,50 +1,62 @@
 root {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 html {
-    margin: 5px;
+  margin: 5px;
 }
 
 h1 {
-    font-size: 26px;
-    text-align: center;
+  font-size: 26px;
+  text-align: center;
 }
 
 table {
-    border: 2px;
-    width: -webkit-fill-available;
+  border: 2px;
+  width: -webkit-fill-available;
 }
 
 th {
-    border: solid;
-    border-color: cadetblue;
+  border: solid;
+  border-color: cadetblue;
 }
 
-td{
-    padding: 5px;
-    border: solid;
-    border-color: rgb(95, 160, 122);
+td {
+  padding: 5px;
+  border: solid;
+  border-color: rgb(95, 160, 122);
 }
 
 form {
-    display: grid;
-    grid-template-rows: repeat(5, minmax(40px, 1fr));
+  display: grid;
+  grid-template-rows: repeat(5, minmax(40px, 1fr));
 }
 
 button {
-    border-radius: 12px;
-    font-size: 20px;
-    font-style: italic;
+  border-radius: 12px;
+  font-size: 20px;
+  font-style: italic;
 }
 
 .btn-nrm {
-    background-color: papayawhip;
+  background-color: papayawhip;
 }
 
 div {
-    border: solid;
-    border-radius: 5px;
-    margin: 5px;
+  border: solid;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+input:invalid {
+  border: 2px dashed red;
+}
+
+input:invalid:required {
+  background-image: linear-gradient(to right, pink, lightgreen);
+}
+
+input:valid {
+  border: 2px solid black;
 }
